--- a/style.css
+++ b/style.css
@@ -419,9 +419,19 @@ div{
     }
 
     .contact-title p {
-      font-size: 14px;
-      color: #a9b7ff;
+      font-size: 24px;
+      color: cyan;
     }
+.contact-title button{
+      width: 40%;
+      height: 40px;
+      border-radius: 10px;
+      margin-bottom: 10px;
+
+      }
+      #contbtn:hover{
+ box-shadow: 0px 0px 10px cyan;
+      }
 
     form {
       margin-top: 20px;
@@ -507,4 +517,5 @@ div{
       .contact-wrapper {
         padding: 20px;
       }
+
     }
