--- a/style.css
+++ b/style.css
@@ -426,7 +426,7 @@ div{
       width: 40%;
       height: 40px;
       border-radius: 10px;
-      margin-bottom: 10px;
+      margin-top: 10px;
 
       }
       #contbtn:hover{
@@ -519,3 +519,4 @@ div{
       }
 
     }
+
